force-app/main/default/objects/Customer_Feedback__c.object
<CustomObject>
    <description>Captures post-call surveys.</description>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>FB-{0000000}</displayFormat>
        <label>Feedback ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Feedbacks</relationshipLabel>
        <relationshipName>Customer_Feedbacks</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>